Changed the typewriter font size, adjusted the bootstrap 4 icon so not squeezed, adjusted text alignment in portfolio section. Corrected one case of inline styling.

--- a/public_html/styles/style.css
+++ b/public_html/styles/style.css
@@ -28,6 +28,9 @@ body {
 	margin-left: 0;
 }
 
+hr {
+	width: 100px;
+}
 /*NAVIGATION BAR
 ***********************************************************************/
 /*.nav-link,*/
